@@ -34,6 +34,7 @@
 
 #include "vpn-password-dialog.h"
 #include "nm-utils.h"
+#include <nm-connection.h>
 
 
 typedef struct {
@@ -83,63 +84,46 @@ out:
 	return TRUE;
 }
 
-gboolean
-nma_vpn_request_password (const char *name, const char *service, gboolean retry, GHashTable *properties)
+static char *
+find_auth_dialog_binary (const char *service, const char *name)
 {
-	const char       *argv[] = {NULL /*"/usr/libexec/nm-vpnc-auth-dialog"*/, 
-			      "-n", NULL /*"davidznet42"*/, 
-			      "-s", NULL /*"org.freedesktop.vpnc"*/, 
-			      "-r",
-			      NULL};
-	int         child_stdin;
-	int         child_stdout;
-	GPid        child_pid;
-	int         child_status;
-	GIOChannel *child_stdout_channel;
-	guint       child_stdout_channel_eventid;
-	GDir       *dir;
-	char       *auth_dialog_binary;
-	IOUserData io_user_data;
-	gboolean success = FALSE;
+	GDir * dir;
+	char * prog = NULL;
+	const char *f;
 
-	auth_dialog_binary = NULL;
+	dir = g_dir_open (VPN_NAME_FILES_DIR, 0, NULL);
+	if (!dir)
+		goto out;
 
-	/* find the auth-dialog binary */
-	if ((dir = g_dir_open (VPN_NAME_FILES_DIR, 0, NULL)) != NULL) {
-		const char *f;
+	while (prog == NULL && (f = g_dir_read_name (dir)) != NULL) {
+		char *path;
+		GKeyFile *keyfile;
 
-		while (auth_dialog_binary == NULL && (f = g_dir_read_name (dir)) != NULL) {
-			char *path;
-			GKeyFile *keyfile;
+		if (!g_str_has_suffix (f, ".name"))
+			continue;
 
-			if (!g_str_has_suffix (f, ".name"))
-				continue;
+		path = g_strdup_printf ("%s/%s", VPN_NAME_FILES_DIR, f);
 
-			path = g_strdup_printf ("%s/%s", VPN_NAME_FILES_DIR, f);
+		keyfile = g_key_file_new ();
+		if (g_key_file_load_from_file (keyfile, path, 0, NULL)) {
+			char *thisservice;
 
-			keyfile = g_key_file_new ();
-			if (g_key_file_load_from_file (keyfile, path, 0, NULL)) {
-				char *thisservice;
+			if ((thisservice = g_key_file_get_string (keyfile, 
+								  "VPN Connection", 
+								  "service", NULL)) != NULL &&
+			    strcmp (thisservice, service) == 0) {
 
-				if ((thisservice = g_key_file_get_string (keyfile, 
-									  "VPN Connection", 
-									  "service", NULL)) != NULL &&
-				    strcmp (thisservice, service) == 0) {
-
-					auth_dialog_binary = g_key_file_get_string (keyfile, 
-										    "GNOME", 
-										    "auth-dialog", NULL);
-				}
-
-				g_free (thisservice);
+				prog = g_key_file_get_string (keyfile, "GNOME", "auth-dialog", NULL);
 			}
-			g_key_file_free (keyfile);
-			g_free (path);
+			g_free (thisservice);
 		}
-		g_dir_close (dir);
+		g_key_file_free (keyfile);
+		g_free (path);
 	}
+	g_dir_close (dir);
 
-	if (auth_dialog_binary == NULL) {
+out:
+	if (prog == NULL) {
 		/* could find auth-dialog */
 		GtkWidget *dialog;
 
@@ -154,13 +138,65 @@ nma_vpn_request_password (const char *name, const char *service, gboolean retry,
 							  service);
 		gtk_window_present (GTK_WINDOW (dialog));
 		g_signal_connect_swapped (dialog, "response", G_CALLBACK (gtk_widget_destroy), dialog);
-		goto out;
 	}
+
+	return prog;
+}
+
+static void
+destroy_gvalue (gpointer data)
+{
+	GValue *value = (GValue *) data;
+
+	g_value_unset (value);
+	g_slice_free (GValue, value);
+}
+
+gboolean
+nma_vpn_request_password (NMConnection *connection,
+                          const char *setting_name,
+                          gboolean retry,
+                          DBusGMethodInvocation *context)
+{
+	const char *argv[] = { NULL /*"/usr/libexec/nm-vpnc-auth-dialog"*/, 
+	                       "-n", NULL /*"davidznet42"*/, 
+	                       "-s", NULL /*"org.freedesktop.vpnc"*/, 
+	                       "-r",
+	                       NULL
+	                     };
+	int         child_stdin;
+	int         child_stdout;
+	GPid        child_pid;
+	int         child_status;
+	GIOChannel *child_stdout_channel;
+	guint       child_stdout_channel_eventid;
+	char       *auth_dialog_binary = NULL;
+	IOUserData io_user_data;
+	NMSettingConnection *s_con;
+	NMSettingVPN *s_vpn;
+	gboolean success = FALSE;
+
+	g_return_val_if_fail (NM_IS_CONNECTION (connection), FALSE);
+
+	s_con = (NMSettingConnection *) nm_connection_get_setting (connection, NM_SETTING_CONNECTION);
+	g_return_val_if_fail (s_con != NULL, FALSE);
+	g_return_val_if_fail (s_con->name != NULL, FALSE);
+	g_return_val_if_fail (s_con->type != NULL, FALSE);
+	g_return_val_if_fail (strcmp (s_con->type, "vpn") == 0, FALSE);
+
+	s_vpn = (NMSettingVPN *) nm_connection_get_setting (connection, NM_SETTING_VPN);
+	g_return_val_if_fail (s_vpn != NULL, FALSE);
+	g_return_val_if_fail (s_vpn->service_type != NULL, FALSE);
+
+	/* find the auth-dialog binary */
+	auth_dialog_binary = find_auth_dialog_binary (s_vpn->service_type, s_con->name);
+	if (!auth_dialog_binary)
+		goto out;
 
 	/* Fix up parameters with what we got */
 	argv[0] = auth_dialog_binary;
-	argv[2] = name;
-	argv[4] = service;
+	argv[2] = s_con->name;
+	argv[4] = s_vpn->service_type;
 	if (!retry)
 		argv[5] = NULL;
 
@@ -185,10 +221,10 @@ nma_vpn_request_password (const char *name, const char *service, gboolean retry,
 						 GTK_MESSAGE_ERROR,
 						 GTK_BUTTONS_CLOSE,
 						 _("Cannot start VPN connection '%s'"),
-						 name);
+						 s_con->name);
 		gtk_message_dialog_format_secondary_text (GTK_MESSAGE_DIALOG (dialog),
   _("There was a problem launching the authentication dialog for VPN connection type '%s'. Contact your system administrator."),
-							  service);
+							  s_vpn->service_type);
 		gtk_window_present (GTK_WINDOW (dialog));
 		g_signal_connect_swapped (dialog, "response", G_CALLBACK (gtk_widget_destroy), dialog);
 		goto out;
@@ -218,6 +254,10 @@ nma_vpn_request_password (const char *name, const char *service, gboolean retry,
 
 	if (child_status == 0) {
 		GSList *iter;
+		GHashTable *secrets;
+
+		/* Send the secret back to NM */
+		secrets = g_hash_table_new_full (g_str_hash, g_str_equal, g_free, destroy_gvalue);
 
 		for (iter = io_user_data.lines; iter; iter = iter->next) {
 			GValue *val;
@@ -229,9 +269,11 @@ nma_vpn_request_password (const char *name, const char *service, gboolean retry,
 			g_value_init (val, G_TYPE_STRING);
 			g_value_set_string (val, iter->next->data);
 
-			g_hash_table_insert (properties, g_strdup (iter->data), val);
+			g_hash_table_insert (secrets, g_strdup (iter->data), val);
 			iter = iter->next;
 		}
+		dbus_g_method_return (context, secrets);
+		g_hash_table_destroy (secrets);
 
 		success = TRUE;
 	}
