@@ -1,3 +1,11 @@
+2007-09-26  Dan Williams  <dcbw@redhat.com>
+
+	* src/vpn-password-dialog.c
+	  src/vpn-password-dialog.h
+	  src/applet-dbus-settings.c
+		- (applet_dbus_connection_settings_get_secrets): call out to the VPN
+			password dialog helper bits
+
 2007-09-25  Dan Williams  <dcbw@redhat.com>
 
 	* src/menu-items.c
